[package]
name = "bevy_old_tv_shader"
description = "An \"old TV\" post-processing effect"
authors = ["Denis Lavrentev"]
repository = "https://github.com/Defernus/bevy_old_tv_shader"
version = "0.4.0"
edition = "2021"
keywords = [
    "bevy",
    "gamedev",
    "shader",
]
categories = [
    "game-development"
]
readme = "README.md"
license = "MIT"

[dependencies]
bevy = { version = "^0.17", default-features = false, features = [ "bevy_pbr", "bevy_sprite_render" ] }
bevy_ui = { version = "^0.17", optional = true }
bevy_ui_render = { version = "^0.17", optional = true }

[dev-dependencies]
bevy = { version = "^0.17" }

[features]
ui = ["dep:bevy_ui", "dep:bevy_ui_render"]
